--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   scheduled:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: check out this repo
         uses: actions/checkout@v2
@@ -14,10 +14,9 @@ jobs:
         with:
           path: |
             node_modules
-            /home/runner/.cache/puppeteer
           key: node_modules-${{ hashfiles('yarn.lock') }}
       - name: install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install
       - name: fetch latest data
         run: yarn start
       - name: commit and push if it changed
