--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   scheduled:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: check out this repo
         uses: actions/checkout@v2
@@ -14,10 +14,11 @@ jobs:
         with:
           path: |
             node_modules
-          key: node_modules-${{ hashfiles('yarn.lock') }}
+            /home/runner/.cache/puppeteer
+          key: node_modules-${{ hashfiles('package-lock.json') }}
       - name: install dependencies
-        run: yarn install
+        run: npm ci
       - name: fetch latest data
-        run: yarn start
+        run: npm start
       - name: commit and push if it changed
         run: ./update.sh
